k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmanagement
  labels:
    name: taskmanagement
    app: task-management
    environment: development
